test/SemanticAnalysis/LifetimeMethods/InvalidStaticnessIsValid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__isvalid' should not be static
	static bool __isvalid() noexcept {
		return true;
	}
}

// CHECK: 1 error generated.
